# STR-25-001-Brew-Widget

./: .gitignore  .gitmodules  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci-changelog.yml  publish-docs.yml  release.yml
authors/: index.html
bom/: index.html
changelog/: index.html
checklists/github_release/: index.html
checklists/kicad_jlpcb/: index.html
checklists/kicad_pcb/: index.html
checklists/kicad_schematic/: index.html
design/design/: index.html
docs/: changelog.md  github.md  index.md  references.md
docs/checklists/: github_release.md  kicad_schematic.md
firmware/overview/: index.html
github/: index.html
hardware/mechanical/: index.html
hardware/overview/: index.html
kicad8/: ESP32.kicad_sch  Power_sch.kicad_sch  STR-25-001 Brew Widget.kicad_pcb  STR-25-001 Brew Widget.kicad_prl  STR-25-001 Brew Widget.kicad_pro  STR-25-001 Brew Widget.kicad_sch
kicad8/bom/: ibom.html
kicad8/production/: netlist.ipc
license/: index.html
references/: index.html
search/: search_index.json
